// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{946A98B60000000000000000}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAwOioDGa4dL3GSjjMttp9VQKpp1hXngMjgwswoWyl_5T8A",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 8838n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{AFF90F570000000000000000}",
          "type": "cell",
        },
        "bounce": true,
        "from": "kQAwOioDGa4dL3GSjjMttp9VQKpp1hXngMjgwswoWyl_5T8A",
        "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
        "type": "internal",
        "value": 9989966000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "message": {
      "body": {
        "cell": "x{20064F3B00000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAwOioDGa4dL3GSjjMttp9VQKpp1hXngMjgwswoWyl_5T8A",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 6373n,
    "type": "processed",
  },
]
`;
